does this help with the bug where the modal appears offscreen on mobile that can't be repro'd in chrome on desktop?

--- a/client/blocks/inline-help/style.scss
+++ b/client/blocks/inline-help/style.scss
@@ -88,6 +88,7 @@
 			right: 0 !important;
 			bottom: 0 !important;
 			left: 0 !important;
+			position: fixed;
 		background: rgba( $gray-light, 0.8 );
 
 		.popover__arrow {
